--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-cli": "^1.3.0",
     "gulp-sass": "^3.1.0",
     "material-ui": "^0.18.1",
+    "react-calendar-component": "^1.1.1",
     "react-http-request": "^1.0.3",
     "react-scripts": "0.9.5"
   },
