--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "material-ui": "^0.18.1",
     "react-calendar-component": "^1.1.1",
     "react-http-request": "^1.0.3",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
